feat: Ajout de l'exo 1.a

--- a/reservation.html
+++ b/reservation.html
@@ -27,7 +27,9 @@
             </ul>
         </div>
         <div class="content">
-            À compléter
+            <form action="confirmation.html" method="get">
+
+            </form>
         </div>
     </div>
     <div class="footer">
