feat: Ajout du header H2

--- a/reservation.html
+++ b/reservation.html
@@ -28,7 +28,7 @@
         </div>
         <div class="content">
             <form action="confirmation.html" method="get">
-
+                <h2>Veuillez entrer vos coordonnées pour réserver votre voyage.</h2>
             </form>
         </div>
     </div>
