feat: Ajout de l'exo 1.b

--- a/reservation.html
+++ b/reservation.html
@@ -29,6 +29,10 @@
         <div class="content">
             <form action="confirmation.html" method="get">
                 <h2>Veuillez entrer vos coordonnées pour réserver votre voyage.</h2>
+                <div>
+                    <label for="nb-persons">Nombre de personnes : </label>
+                    <input type="number" name="nb-persons" id="nb-persons">(*)
+                </div>
             </form>
         </div>
     </div>
