feat: Ajout de l'exo 1.c

--- a/reservation.html
+++ b/reservation.html
@@ -33,6 +33,10 @@
                     <label for="nb-persons">Nombre de personnes : </label>
                     <input type="number" name="nb-persons" id="nb-persons">(*)
                 </div>
+                <div>
+                    <label for="nb-persons">Date de réservation : </label>
+                    <input type="date" name="nb-persons" id="nb-persons">(*)
+                </div>
             </form>
         </div>
     </div>
