fix: Utilisation d'un table pour le layout

--- a/reservation.html
+++ b/reservation.html
@@ -29,14 +29,24 @@
         <div class="content">
             <form action="confirmation.html" method="get">
                 <h2>Veuillez entrer vos coordonnées pour réserver votre voyage.</h2>
-                <div>
-                    <label for="nb-persons">Nombre de personnes : </label>
-                    <input type="number" name="nb-persons" id="nb-persons">(*)
-                </div>
-                <div>
-                    <label for="nb-persons">Date de réservation : </label>
-                    <input type="date" name="nb-persons" id="nb-persons">(*)
-                </div>
+                <table>
+                    <tr>
+                        <td>
+                            <label for="nb-persons">Nombre de personnes : </label>
+                        </td>
+                        <td>
+                            <input type="number" name="nb-persons" id="nb-persons">(*)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label for="nb-persons">Date de réservation : </label>
+                        </td>
+                        <td>
+                            <input type="date" name="nb-persons" id="nb-persons">(*)
+                        </td>
+                    </tr>
+                </table>
             </form>
         </div>
     </div>
