fix: Correction de l'ID des champts

--- a/reservation.html
+++ b/reservation.html
@@ -40,10 +40,10 @@
                     </tr>
                     <tr>
                         <td>
-                            <label for="nb-persons">Date de réservation : </label>
+                            <label for="reservation-date">Date de réservation : </label>
                         </td>
                         <td>
-                            <input type="date" name="nb-persons" id="nb-persons">(*)
+                            <input type="date" name="reservation-date" id="reservation-date">(*)
                         </td>
                     </tr>
                 </table>
