feat: Ajout de l'exo 1.d

--- a/reservation.html
+++ b/reservation.html
@@ -46,6 +46,20 @@
                             <input type="date" name="reservation-date" id="reservation-date">(*)
                         </td>
                     </tr>
+                    <tr>
+                        <td>
+                            <label for="destination-choice">Destination choisie : </label>
+                        </td>
+                        <td>
+                            <select name="destination-choice" id="destination-choice">
+                                <option value="">Foix</option>
+                                <option value="">Sarlat</option>
+                                <option value="">Gorge de l’Ardèche</option>
+                                <option value="">Canal du Midi</option>
+                            </select>
+                            (*)
+                        </td>
+                    </tr>
                 </table>
             </form>
         </div>
