feat :Ajout de l'exo 1.e

--- a/reservation.html
+++ b/reservation.html
@@ -60,6 +60,11 @@
                             (*)
                         </td>
                     </tr>
+                    <tr>
+                        <td>
+                            <input type="button" value="V&eacute;rifier la disponibilit&eacute;">
+                        </td>
+                    </tr>
                 </table>
             </form>
         </div>
