--- a/reservation.html
+++ b/reservation.html
@@ -65,6 +65,18 @@
                             <input type="button" value="V&eacute;rifier la disponibilit&eacute;">
                         </td>
                     </tr>
+                    <tr>
+                        <td>
+                            <label for="appellation">Appellation : </label>
+                        </td>
+                        <td>
+                            <select name="appellation" id="appellation">
+                                <option value="">Mme</option>
+                                <option value="">M.</option>
+                            </select>
+                            (*)
+                        </td>
+                    </tr>
                 </table>
             </form>
         </div>
