feat: Ajout de l'exo 1.g

--- a/reservation.html
+++ b/reservation.html
@@ -77,6 +77,22 @@
                             (*)
                         </td>
                     </tr>
+                    <tr>
+                        <td>
+                            <label for="nom">Nom : </label>
+                        </td>
+                        <td>
+                            <input type="text" name="nom" id="nom">(*)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label for="phone-number">Numéro de téléphone : </label>
+                        </td>
+                        <td>
+                            <input type="text" name="phone-number" id="phone-number">(*)
+                        </td>
+                    </tr>
                 </table>
             </form>
         </div>
