feat: Ajout de l'exo 1.h

--- a/reservation.html
+++ b/reservation.html
@@ -93,6 +93,14 @@
                             <input type="text" name="phone-number" id="phone-number">(*)
                         </td>
                     </tr>
+                    <tr>
+                        <td>
+                            <label for="email">Adresse e-mail : </label>
+                        </td>
+                        <td>
+                            <input type="email" name="email" id="email">(*)
+                        </td>
+                    </tr>
                 </table>
             </form>
         </div>
