feat: Ajout de l'exo 1.i

--- a/reservation.html
+++ b/reservation.html
@@ -101,6 +101,16 @@
                             <input type="email" name="email" id="email">(*)
                         </td>
                     </tr>
+                    <tr>
+                        <td>
+                            Moyen de paiement :
+                        </td>
+                        <td>
+                            <label for="payment-mode">Ch&egrave;ques vacances</label>
+                            <input type="radio" name="payment-mode" id="">
+                            (*)
+                        </td>
+                    </tr>
                 </table>
             </form>
         </div>
