feat: Ajout de l'exo 1.j

--- a/reservation.html
+++ b/reservation.html
@@ -111,6 +111,14 @@
                             (*)
                         </td>
                     </tr>
+                    <tr>
+                        <td>
+                            <label for="commentaire">Commentaires :</label>
+                        </td>
+                        <td>
+                            <textarea name="commentaire" id="commentaire"></textarea>
+                        </td>
+                    </tr>
                 </table>
             </form>
         </div>
