feat: Ajout de l'exo 1.k

--- a/reservation.html
+++ b/reservation.html
@@ -119,6 +119,18 @@
                             <textarea name="commentaire" id="commentaire"></textarea>
                         </td>
                     </tr>
+                    <tr>
+                        <td colspan="2">
+                            <input type="checkbox" checked name="accept-offers" id="accept-offers">
+                            <label for="accept-offers">Je souhaite recevoir des offres promotionnelles.</label>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="2">
+                            <input type="checkbox" name="accept-conditions" id="accept-conditions">
+                            <label for="accept-conditions">J’ai lu les conditions générales de vente. (*)</label>
+                        </td>
+                    </tr>
                 </table>
             </form>
         </div>
