feat: Ajout de l'exo 1.l

--- a/reservation.html
+++ b/reservation.html
@@ -62,7 +62,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <input type="button" value="V&eacute;rifier la disponibilit&eacute;">
+                            <input type="button" name="check-disponibility" id="check-disponibility" value="V&eacute;rifier la disponibilit&eacute;">
                         </td>
                     </tr>
                     <tr>
@@ -106,8 +106,8 @@
                             Moyen de paiement :
                         </td>
                         <td>
-                            <label for="payment-mode">Ch&egrave;ques vacances</label>
-                            <input type="radio" name="payment-mode" id="">
+                            <label for="vacation-check">Ch&egrave;ques vacances</label>
+                            <input type="radio" name="payment-mode" id="vacation-check">
                             (*)
                         </td>
                     </tr>
