feat: Ajout de l'exo 2

--- a/reservation.html
+++ b/reservation.html
@@ -131,6 +131,14 @@
                             <label for="accept-conditions">J’ai lu les conditions générales de vente. (*)</label>
                         </td>
                     </tr>
+                    <tr>
+                        <td>
+                            <input type="submit" value="Envoi" name="submit" id="submit">
+                        </td>
+                        <td>
+                            <input type="reset" value="Reset" name="reset" id="reset">
+                        </td>
+                    </tr>
                 </table>
             </form>
         </div>
