--- a/reservation.html
+++ b/reservation.html
@@ -35,7 +35,7 @@
                             <label for="nb-persons">Nombre de personnes : </label>
                         </td>
                         <td>
-                            <input type="number" name="nb-persons" id="nb-persons">(*)
+                            <input type="number" name="nb-persons" id="nb-persons" title="Veuillez renseigner le nombre de personnes voyageuses" placeholder="Ex : 2">(*)
                         </td>
                     </tr>
                     <tr>
@@ -43,7 +43,7 @@
                             <label for="reservation-date">Date de réservation : </label>
                         </td>
                         <td>
-                            <input type="date" name="reservation-date" id="reservation-date">(*)
+                            <input type="date" name="reservation-date" id="reservation-date" title="Veuillez renseigner la date de réservaton de votre voyage">(*)
                         </td>
                     </tr>
                     <tr>
@@ -51,7 +51,7 @@
                             <label for="destination-choice">Destination choisie : </label>
                         </td>
                         <td>
-                            <select name="destination-choice" id="destination-choice">
+                            <select name="destination-choice" id="destination-choice" title="Veuillez renseigner la destination de votre choix">
                                 <option value="">Foix</option>
                                 <option value="">Sarlat</option>
                                 <option value="">Gorge de l’Ardèche</option>
@@ -62,7 +62,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <input type="button" name="check-disponibility" id="check-disponibility" value="V&eacute;rifier la disponibilit&eacute;">
+                            <input type="button" name="check-disponibility" id="check-disponibility" value="V&eacute;rifier la disponibilit&eacute;" title="Cliquez ici pour vérifier la disponibilité">
                         </td>
                     </tr>
                     <tr>
@@ -70,7 +70,7 @@
                             <label for="appellation">Appellation : </label>
                         </td>
                         <td>
-                            <select name="appellation" id="appellation">
+                            <select name="appellation" id="appellation" title="Veuillez renseigner votre appellation">
                                 <option value="">Mme</option>
                                 <option value="">M.</option>
                             </select>
@@ -82,7 +82,7 @@
                             <label for="nom">Nom : </label>
                         </td>
                         <td>
-                            <input type="text" name="nom" id="nom">(*)
+                            <input type="text" name="nom" id="nom" title="Veuillez renseigner votre nom" placeholder="Entrez votre nom">(*)
                         </td>
                     </tr>
                     <tr>
@@ -90,7 +90,7 @@
                             <label for="phone-number">Numéro de téléphone : </label>
                         </td>
                         <td>
-                            <input type="text" name="phone-number" id="phone-number">(*)
+                            <input type="text" name="phone-number" id="phone-number" title="Veuillez renseigner votre numéro de téléphone" placeholder="Ex : 0123456789">(*)
                         </td>
                     </tr>
                     <tr>
@@ -98,7 +98,7 @@
                             <label for="email">Adresse e-mail : </label>
                         </td>
                         <td>
-                            <input type="email" name="email" id="email">(*)
+                            <input type="email" name="email" id="email" title="Veuillez renseigner votre adresse e-mail" placeholder="Ex : prenom.nom@fai.com">(*)
                         </td>
                     </tr>
                     <tr>
@@ -116,7 +116,7 @@
                             <label for="commentaire">Commentaires :</label>
                         </td>
                         <td>
-                            <textarea name="commentaire" id="commentaire"></textarea>
+                            <textarea name="commentaire" id="commentaire" title="Laissez-nous un commentaires si vous le voulez" placeholder="Entrez votre commentaire"></textarea>
                         </td>
                     </tr>
                     <tr>
@@ -133,10 +133,10 @@
                     </tr>
                     <tr>
                         <td>
-                            <input type="submit" value="Envoi" name="submit" id="submit">
+                            <input type="submit" value="Envoi" name="submit" id="submit" title="Cliquez ici si vous voulez soumettre votre réservation">
                         </td>
                         <td>
-                            <input type="reset" value="Reset" name="reset" id="reset">
+                            <input type="reset" value="Reset" name="reset" id="reset" title="Cliquez ici si vous vider le formulaire">
                         </td>
                     </tr>
                 </table>
