feat: Ajout de l'exo 1.6.b

--- a/reservation.html
+++ b/reservation.html
@@ -90,7 +90,7 @@
                             <label for="phone-number">Numéro de téléphone : </label>
                         </td>
                         <td>
-                            <input type="text" name="phone-number" id="phone-number" title="Veuillez renseigner votre numéro de téléphone" placeholder="Ex : 0123456789" required>(*)
+                            <input type="text" name="phone-number" id="phone-number" title="Veuillez renseigner votre numéro de téléphone" placeholder="Ex : 0123456789" pattern="[0-9]{10}" required>(*)
                         </td>
                     </tr>
                     <tr>
