--- a/reservation.html
+++ b/reservation.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Agence Pas Loin Pas Cher</title>
     <link rel="stylesheet" href="./style.css">
+    <script src="script.js"></script>
 </head>
 
 <body>
