feat: Ajout de l'exo 2.3.b

--- a/reservation.html
+++ b/reservation.html
@@ -63,7 +63,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <input type="button" name="check-disponibility" id="check-disponibility" value="V&eacute;rifier la disponibilit&eacute;" title="Cliquez ici pour vérifier la disponibilité">
+                            <input type="button" name="check-disponibility" id="check-disponibility" onclick="testDisponibilite('nb-persons')" value="V&eacute;rifier la disponibilit&eacute;" title="Cliquez ici pour vérifier la disponibilité">
                         </td>
                     </tr>
                     <tr>
