feat: Ajout de l'exo 2.4

--- a/reservation.html
+++ b/reservation.html
@@ -107,6 +107,8 @@
                             Moyen de paiement :
                         </td>
                         <td>
+                            <label for="virement">Virement</label>
+                            <input type="radio" name="payment-mode" id="virement" required>
                             <label for="vacation-check">Ch&egrave;ques vacances</label>
                             <input type="radio" name="payment-mode" id="vacation-check" required>
                             (*)
