feat: Ajout de l'exo 2.3.5

--- a/reservation.html
+++ b/reservation.html
@@ -112,6 +112,10 @@
                             <label for="vacation-check">Ch&egrave;ques vacances</label>
                             <input type="radio" name="payment-mode" id="vacation-check" required>
                             (*)
+                            <div id="divIBAN">
+                                <label for="iban">IBAN : </label>
+                                <input type="text" name="iban" id="iban" placeholder="FR07 XXXX XXXX XXXX XXXX">
+                            </div>
                         </td>
                     </tr>
                     <tr>
