feat: Respect de la consigne initiale

--- a/reservation.html
+++ b/reservation.html
@@ -108,7 +108,7 @@
                         </td>
                         <td>
                             <label for="virement">Virement</label>
-                            <input type="radio" name="payment-mode" id="virement" onclick="afficherIBAN()" required>
+                            <input type="radio" name="payment-mode" id="virement" onclick="afficherIBAN()" required checked>
                             <label for="vacation-check">Ch&egrave;ques vacances</label>
                             <input type="radio" name="payment-mode" id="vacation-check" onclick="cacherIBAN()" required>
                             (*)
