--- a/reservation.html
+++ b/reservation.html
@@ -53,10 +53,10 @@
                         </td>
                         <td>
                             <select name="destination-choice" id="destination-choice" title="Veuillez renseigner la destination de votre choix" required>
-                                <option value="">Foix</option>
-                                <option value="">Sarlat</option>
-                                <option value="">Gorge de l’Ardèche</option>
-                                <option value="">Canal du Midi</option>
+                                <option value="foix">Foix</option>
+                                <option value="sarlat">Sarlat</option>
+                                <option value="gorge">Gorge de l’Ardèche</option>
+                                <option value="canal">Canal du Midi</option>
                             </select>
                             (*)
                         </td>
@@ -108,9 +108,9 @@
                         </td>
                         <td>
                             <label for="virement">Virement</label>
-                            <input type="radio" name="payment-mode" id="virement" onclick="afficherIBAN()" required checked>
+                            <input type="radio" name="payment-mode[]" id="virement" onclick="afficherIBAN()" value="virement" required checked>
                             <label for="vacation-check">Ch&egrave;ques vacances</label>
-                            <input type="radio" name="payment-mode" id="vacation-check" onclick="cacherIBAN()" required>
+                            <input type="radio" name="payment-mode[]" id="vacation-check" onclick="cacherIBAN()" value="vacation-check" required>
                             (*)
                             <div id="divIBAN">
                                 <label for="iban">IBAN : </label>
