fix: Correction de la valeur des options

--- a/reservation.html
+++ b/reservation.html
@@ -72,8 +72,8 @@
                         </td>
                         <td>
                             <select name="appellation" id="appellation" title="Veuillez renseigner votre appellation" required>
-                                <option value="">Mme</option>
-                                <option value="">M.</option>
+                                <option value="mme">Mme</option>
+                                <option value="mr">M.</option>
                             </select>
                             (*)
                         </td>
