fix: Correction de la liste de footer

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
         <p>Copyright C 2022 | Votre nom (Pour me contacter: <a href="mailto:example@domain.com">m'écrire</a> )</p>
         <p>Agence Pas Loin Pas Cher</p>
         <ul>
-            <li>Toulouse : 21 rue de Metz, 31000 Toulouse. Tel.: 012 98 76 54 32</li>
-            <li>Bordeaux : 134 Quai de Bacalan, 33300 Bordeaux. Tel.: 012 98 76 54 31</li>
+            <li><span>Toulouse :</span> 21 rue de Metz, 31000 Toulouse. Tel.: 012 98 76 54 32</li>
+            <li><span>Bordeaux :</span> 134 Quai de Bacalan, 33300 Bordeaux. Tel.: 012 98 76 54 31</li>
         </ul>
         
         
