--- a/reservation.html
+++ b/reservation.html
@@ -108,9 +108,9 @@
                         </td>
                         <td>
                             <label for="virement">Virement</label>
-                            <input type="radio" name="payment-mode[]" id="virement" onclick="afficherIBAN()" value="virement" required checked>
+                            <input type="radio" name="payment-mode[]" id="virement" onclick="afficherIBAN()" value="virement" required>
                             <label for="vacation-check">Ch&egrave;ques vacances</label>
-                            <input type="radio" name="payment-mode[]" id="vacation-check" onclick="cacherIBAN()" value="vacation-check" required>
+                            <input type="radio" name="payment-mode[]" id="vacation-check" onclick="cacherIBAN()" value="vacation-check" required checked>
                             (*)
                             <div id="divIBAN">
                                 <label for="iban">IBAN : </label>
